app/assets/stylesheets/discussions.css.scss
@import "bootstrap/mixins";
@import "settings";
@import "mixins";


body.discussions.new, body.discussions.create {
  #discussion-markdown-dropdown {
    float: right;
    left: 12px;
    li i {
      display: inline-block;
      width: 15px;
    }
  }
  #discussion-submit {
    float: left;
    position: relative;
  }
  .markdown-setting-dropdown {
    margin-top: 2px;
    margin-left: -10px;
  }
}


body.discussions.show {
  .discussion-title-container {
    display: inline-block;
    width: 850px;
    margin: 0 0 0 15px;

    #discussion-title { font-size: 22px; }
    #edit-discussion-title {
      float: left;
      #cancel-edit-title {
        color: $mid-grey;
        font-size: $font-tiny;
        margin-left: 10px;
        text-decoration: underline;
        position: relative;
        &:hover { color: $dark-grey; }
      }
      .character-counter { bottom: 0; }

      .control-group { margin-bottom: 0px; }
      form {
        margin: 4px 0 0 0;
        width: 830px;
        .control-group #discussion-input {
          width: 820px;
          font-size: $font-xlarge;
          margin-bottom: 2px;
        }
      }
      .save-buttons {
        position: relative;
        bottom: 5px;
      }
    }
  }
  #discussion-content-container {
    background-color: white;
    border-top: 1px solid $lighter-grey;
    border-bottom: 1px solid $light-grey;
    padding-bottom: 20px;
    margin-bottom: 5px;
    #previous-proposals .selector-list { border-top: 1px solid $lighter-grey; }
    .content-proposal-body {
      padding: 0 10px 10px 50px;
      ul.selector-list {
        li.empty-list-message { padding: 4px; }
        li .motion {
          .close-date {
            color: $mid-grey;
            font-size: $font-tiny;
          }
        }
      }
    }
    #discussion-context {
      border-bottom: 1px solid $lighter-grey;
      min-height: 70px;
      padding: 15px 10px 10px 15px;

      #description-edit-form {
        margin-bottom: 0px;
        #add-description-submit { float: left; }
        #cancel-add-description {
          color: $mid-grey;
          float: left;
          font-size: $font-tiny;
          margin: 0 0 0 10px;
          position: relative;
          text-decoration: underline;
          top: 5px;
        }
        .control-group { margin-bottom: 0px; }
        .description-body {
          color: black;
          margin-bottom: 10px;
        }
        #description-input {
          height: 90px;
          margin-bottom: 5px;
          width: 600px;
        }
      }

      #description-revision-history {
        .revision-content{
          clear:both;
        }
        .revision-title {
          width: 450px;
          float: left;
          p { font-size: 85%; }
        }
        .revision-version {
          float: left;
          a.disabled {
            color: $mid-grey;
            cursor: default;
            &:hover { text-decoration: none; }
          }
          &:after {
            content: ".";
            visibility: hidden;
            clear: both;
          }
        }
      }
      .discussion-additional-info {
        color: $mid-grey;
        float: right;
        font-size: $font-smaller;
        max-width: 190px;
        .last-edited-by, .started-by { margin-bottom: 10px; }
      }
      #discussion-markdown-dropdown {
        margin-right: 8px;
        padding-right: 0px;
      }
      .long-description { padding-bottom: 10px; }
      .right-context { width: 265px; }
    }
  }

  #content-comments {
    border-right: 1px solid $lighter-grey;
    min-height: 660px;
    padding: 10px 10px 0 0;
    .comment-anchor {
      padding-top: 50px;
      margin-top: -50px;
      display:block;
    }
    #comment-markdown-dropdown li i {
      display: inline-block;
      width: 15px;
    }
    #discussion-activity-body {
      padding: 10px 0px 10px 8px;
      .divider {
        border-bottom: 1px solid $lighter-grey;
        margin: 7px 15px 6px 0px;
      }
    }
    #discussion-markdown-dropdown li i {
      display: inline-block;
      width: 15px;
    }
    #new-comment-form {
      margin-bottom: 0px;
      padding: 0 0 10px 0;
      background-color: $comment-color;
      img {
        float:left;
        margin-right: 10px;
      }
    }
    #comment-markdown-dropdown {
      margin-top: -32px;
      margin-right: -8px;
    }
    .markdown-setting-dropdown {
      margin-top: -2px;
    }
    #new-comment {
      color: $dark-grey;
      height: 80px;
      margin: 0 0 5px 0px;
      width: 380px;
    }
    #post-new-comment {
      margin: 5px 5px 5px 45px;
    }
    /** Code block padding (Stops avatars destroying indentation) */
    pre {
      display: block;
      margin: 10px 0px;
      overflow: auto;
      white-space: pre;
      word-wrap: normal;
    }
    ul#activity-list {
      list-style: none;
      margin: 0 15px 3px 0;
      padding-top: 3px;
      width: 437px;
      li.empty-list-message {
        margin-left: 45px; /*check this still works*/
      }
      .activity-icon {margin-left: -26px;}
      .activity-item-actor{
        font-weight: bold;
        a {color: $dark-grey;}
      }
      .activity-item-avatar {
        height: 35px;
        margin-right: 0px;
        float: left;
      }
      .activity-item-body {
        margin-left: 45px;
        border-bottom: 1px solid $lighter-grey;
        padding-bottom: 8px;
      }
      .activity-item-comment-actor {
        float: left;
        font-weight: bold;
        margin-right: 8px;
      }
      .activity-item-container {
        margin-top: 8px;
        width: 100%;
      }
      .activity-item-content{
        color: $mid-grey;
        font-style: italic;
        word-wrap: break-word;
      }
      .activity-item-header{
        blockquote p {
          font-size: inherit;
        }
        blockquote, pre {
          &:first-child {
            clear: left;
            position: relative;
            top: -12px;
            margin-bottom: -4px;
           }
        }
        h1, h2, h3, h4, ol, ul {
          &:first-child {
            clear: left;
            position: relative;
            top: -12px;
            margin-bottom: -12px;
        }}
        ol, p, ul {
          color: black;
        }
        p:last-child{margin-bottom: 2px;}
      }
      .activity-item-likes{
        color: $dark-grey;
        font-size: $font-tiny;
      }
      .activity-item-time{
        color: $dark-grey;
        font-size: $font-tiny;
      }
    }
  }

  .header-text {
    color: $mid-grey;
    line-height: 2.0em;
  }

  .selector-panel {
    h2 { margin: 0; }
    background-color: $selector-panel;
    @include border-radius(8px);
    border: 1px solid $lighter-grey;
    margin: 10px 0 20px 0;
    min-height: 59px;
    .dropdown {
      float: right;
      padding: 5px 10px;
      li {
        background-color: white;
        border: none;
        a {
          text-shadow: none;
        }
      }
    }
  }

  .user-name {
    &:link, &:visited{ color: $dark-grey;}
  }
}

li.motion-preview {
  a {
    padding: 10px 15px;
    text-decoration: none;
  }
}


/* Markdown styling */

.activity-item-body .popover h3 { padding: 8px 14px; }
.activity-item-body, .long-description, .motion .description {
  p {
    word-wrap: break-word;
  }
  ul, ol, li {
    margin-left: 10px;
    word-wrap: break-word;
    line-height: 18px;
  }
  ul{
    list-style: disc;
    padding: 0 0 9px 0;
  }
  ol{
    padding: 0 0 9px 0;
  }
  ul ul, ol ul, ul ol, ol ol{
    padding: 2px 0 6px 0;
  }
  h1, h2, h3, h4, h5, h6, h7{
    display: block;
    padding: 4px 0px;
  }
  h1{
    font-size: 1.4em;
  }
  h2{
    font-size: 1.3em;
  }
  h3{
    font-size: 1.2em;
  }
  h4{
    font-size: 1.1em;
  }
  h5{
    font-size: 1.0em;
  }
  hr{
    margin: 1em;
  }
}

/** Code block padding (Stops avatars destroying indentation) */
pre{
  display: block;
  margin: 10px 0px;
  overflow: auto;
  word-wrap: normal;
  white-space: pre;
}



// group and home pages
#discussion-list {
  margin-bottom: 10px;

  .popover-content { padding-top: 8px; }
  .popover-close-date {
    font-weight: normal;
    display: inline;
    font-size: $font-tiny;
    position: relative;
    left: 5px;
    bottom: 2px;
  }
  .popover-header {
    font-weight: bold;
    padding-bottom: 5px;
    border-bottom: 1px solid $light-grey;
  }
  .popover-motion-name {
    color: black;
    font-weight: normal;
    margin-top: 10px;
    padding-top: 5px;
    border-top: 1px solid white;
  }
  .popover-engagement { margin-bottom: 8px; }
  .popover-current-position-icon {
    position: relative;
    bottom: 3px;
    display: inline;
  }
  ul.popover-activity-list {
    max-height: 180px;
    overflow-y: auto;
  }
  li.popover-item {
    padding: 5px 0 5px 0;
    border-bottom: 1px solid $light-grey;
    min-height: 40px;
    .vote-time { font-size: $font-tiny; }
  }
}



.discussion-preview {
  background-color: $unhighlighted;
  float: left;
  height: 47px;
  width: 700px;
  &:hover { background-color: $selector ! important; }
  a {
    color: $dark-grey;
    &:hover { text-decoration: none; }
    &.selector-discussion-link {
      float: left;
      width: 653px;
      padding: 6px 0 5px 5px;
    }
  }

  .motion-popover-link {
    cursor: pointer;
    float: right;
    height: 47px;
    width: 42px;
    .pie { margin: 6px 3px; }
    .preview-pie-button {
      border: none;
      padding: 0;
    }
  }
  .vote-icon {
    float: left;
    padding-right: 7px;
    position: relative;
    top: 6px;
    width: 20px;
  }
  .discussion-title {
    display: inline;
    float: left;
  }
  .group-name {
    color: $mid-grey;
    font-size: $font-small;
    width: 460px;
  }
  .discussion-date-info {
    display: inline;
    float: right;
    font-size: $font-smaller;
    color: $mid-grey;
    padding: 10px 10px 0 0;
    .latest-comment-time, .proposal-close-date { display: inline; }
  }
  .pie {
    float: right;
    width: 36px;
    height: 36px;
    z-index: 1;
  }
  .activity-icon { float: right; }
  .discussion-icon.activity-icon { margin: 8px 6px 0 0; }
  .pie-icon.activity-icon { margin: 12px 5px 0 0; }
  .activity-count {
    font-size: $font-tinywiny;
    position: relative;
    bottom: 8px;
    left: 16px;
    color: white;
    background-color: $group-activity;
  }
  .pie .activity-count {
    bottom: 1px;
    margin-left: 8px;
    z-index: 2;
  }
  .discussion-link {
    position: relative;
    z-index: 2;
  }

  // color coded urgency labels
  .color-urgent { background-color: #CA3232; }
  .color-warning { background-color: #F89406; }
  .color-ok { background: #016B01; }
}

/** pie chart tweaks **/
div.jqplot-table-legend-swatch-outline {border: none;}

div.jqplot-table-legend-swatch{
  border-top-width: 6px;
  border-bottom-width: 6px;
}

